first stab at improved multi-line tooltips (bug 248488)