camino/src/browser/ToolTip.h
@@ -21,6 +21,7 @@
  *
  * Contributor(s):
  *   Richard Schreyer
+ *   Josh Aas <joshmoz@gmail.com>
  *
  * Alternatively, the contents of this file may be used under the terms of
  * either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -42,8 +43,9 @@
 
 @interface ToolTip : NSObject
 {
-	NSPanel* mPanel;
-	NSTextField* mTextField;
+  NSPanel* mPanel;
+  NSTextField* mTextField;
+  NSTextView* mTextView;
 }
 
 //  it expects a point relative to the top left coordinate of the screen
